--- a/index.html
+++ b/index.html
@@ -52,15 +52,16 @@
 
     <ul>
       <!-- Replace __this_page__ with your domain -->
-      <li><a class="u-uid u-url" href="__this_page__">My New Website</a></li>
+      <li><a class="u-uid u-url" href="https://sdavidprince.space">S David Prince</a></li>
 
       <!-- Update or remove the below links! -->
       
       <!-- Replace _mygithubid_ with your GitHub username in both places on the next line: -->
-      <li>Github: <a class="u-url" href="https://github.com/_mygithubid_" rel="me">@_mygithubid_</a></li>
+      <li>Github: <a class="u-url" href="https://github.com/sdavidprince" rel="me">@sdavidprince</a></li>
 
       <!-- Replace _mytwitterid_ with your Twitter username in both places on the next line: -->
-      <li>Twitter: <a class="u-url" href="https://twitter.com/_mytwitterid_" rel="me">@_mytwitterid_</a></li>
+      <li>Twitter: <a class="u-url" href="https://twitter.com/sdavidprince" rel="me">@sdavidprince</a></li>
+      <li>Main Webside: <a class="u-url" href="https://www.sdavidprince.space" rel="me">www.sdavidprince.space</a></li>
       
     </ul>
   </main>
