--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <link rel="microsub" href="https://aperture.p3k.io/microsub/000">
     3. Copy that <link> tag and paste it after this HTML comment.
     4. Publish the updated page!
-   -->
+   --><link rel="microsub" href="https://aperture.p3k.io/microsub/965">
   <title>My New Website</title>
   <style>
     @media (prefers-color-scheme: dark) {
