--- a/index.html
+++ b/index.html
@@ -6,15 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="authorization_endpoint" href="https://indieauth.com/auth">
   <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
-  <!-- To use social readers via microsub, follow these steps.
-    (Details: https://indieweb.org/Microsub#Getting_Started)
-    1. After publishing this to your domain, sign in to https://aperture.p3k.io/login with your domain
-    2. You will see a <link> tag displayed on your dashboard that looks like:
-      <link rel="microsub" href="https://aperture.p3k.io/microsub/000">
-    3. Copy that <link> tag and paste it after this HTML comment.
-    4. Publish the updated page!
-   --><link rel="microsub" href="https://aperture.p3k.io/microsub/965">
-  <title>My New Website</title>
+  <link rel="microsub" href="https://aperture.p3k.io/microsub/965">
+  <title>S David Prince</title>
   <style>
     @media (prefers-color-scheme: dark) {
       html { background-color: #111111; color: #fbfbfb; }
@@ -39,11 +32,9 @@
 <body>
   <!-- Reference for representative h-card properties: https://microformats.org/wiki/h-card -->
   <main class="h-card" rel="author">
-    <!-- Uncomment and add __your_image__ to display a photo!
-      <img class="u-photo" alt="My profile photo" src="__your_image__" />
-    -->
+      <img class="u-photo" alt="My profile photo" src="https://blogger.googleusercontent.com/img/a/AVvXsEiX_A56Zyh-QLWDJ-1Ugpp732H8h6l0yuCSXPFl2Nf8N0zUb8WKryx4MQPk0gYtsBW5QWHOWVfGwQawGSGjCVIh0vEsih7bqGGEjO7XVI0aGVC5GWVsRMmTLcmrf3_QeLysrpaAZzXIfA375a5ohMaBXh-Pzq3vA-YVLFHiRwkDRrn0aMu_HnnqD7zCr3Vr=s300" />
     <h1>
-      I'm <span class="p-name">Jane Smith</span>.
+      I'm <span class="p-name">S David Prince</span>.
     </h1>
 
     <p class="p-note">
@@ -61,7 +52,7 @@
 
       <!-- Replace _mytwitterid_ with your Twitter username in both places on the next line: -->
       <li>Twitter: <a class="u-url" href="https://twitter.com/sdavidprince" rel="me">@sdavidprince</a></li>
-      <li>Main Webside: <a class="u-url" href="https://www.sdavidprince.space" rel="me">www.sdavidprince.space</a></li>
+      <li>Main Website: <a class="u-url" href="https://www.sdavidprince.space" rel="me">www.sdavidprince.space</a></li>
       
     </ul>
   </main>
