--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta name="yandex-verification" content="7e19392e649fcd50" />
   <link rel="authorization_endpoint" href="https://indieauth.com/auth">
   <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
   <link rel="microsub" href="https://aperture.p3k.io/microsub/965">
